# fedhetnet

./: .gitignore  pyproject.toml
algorithms/: scaffold.py
datasets/: awid2_f_trn.sh  awid2_f_tst.sh  awid2_r_trn.sh  awid2_r_tst.sh  awid3_ds.sh  awid3_ds_split1.sh  awid3_ds_split2.sh  awid3_ds_split3.sh  f_ds.sh  full_ds.sh  inz_ds.sh
models/cnn/: model.py  train.py
models/cnn/configs/: cnn.yaml
models/cnn/configs/algorithm/: fed_avg.yaml  fed_prox.yaml  scaffold.yaml
models/cnn/configs/data/: centralized.yaml  fl_custom.yaml  fl_iid.yaml
models/cnn/configs/model/: base.yaml  small.yaml
models/cnn/configs/optimizer/: adam.yaml  adamw.yaml  sgd.yaml
models/cnn/configs/train/: base.yaml
plots/: latex_metrics.py  plot_metrics.py
utils/: export.py  fedjax_compat.py  fl_utils.py  lib5gpl2_utils.py  train_utils.py
utils/data/: awid2.py  awid3.py  csvlogger.py  dataloader.py
